# PCSC2017_Group8

./: .gitignore  CMakeLists.txt  Cholesky.cpp  Cholesky.h  ConjugateGradientDescent.cpp  ConjugateGradientDescent.h  Exceptions.h  GaussSeidel.cpp  GaussSeidel.h  IterativeSolvers.h  Jacobi.cpp  Jacobi.h  LU.cpp  LU.h  Main.cpp  Matrix.cpp  Matrix.h  PCConjugateGradientDescent.cpp  PCConjugateGradientDescent.h  Preconditioners.cpp  Preconditioners.h  README.md  Richardson.cpp  Richardson.h  Solver.cpp  Solver.h  SolverFactory.cpp  SolverFactory.h  TestJacobi.cpp  TestMatrix.cpp  TestRicharson.cpp  Vector.cpp  Vector.h  directSolvers.cpp  directSolvers.h  inputOutput.cpp  inputOutput.h  iterativeSolvers.cpp  iterativeSolvers.h  solver.h  (+4 more)
Examples/: A.txt  A10by10.txt  A2.txt  B.txt
Executables/: Main.cpp  TestMatrix.cpp  test.cpp
Helpers/: CMakeLists.txt  Exceptions.cpp  Exceptions.h  inputOutput.h
Solvers/: CMakeLists.txt  Cholesky.cpp  Cholesky.h  ConjugateGradientDescent.cpp  ConjugateGradientDescent.h  GaussSeidel.h  IterativeSolvers.h  Jacobi.cpp  Jacobi.h  LU.cpp  LU.h  PCConjugateGradientDescent.cpp  PCConjugateGradientDescent.h  Preconditioners.cpp  Preconditioners.h  Richardson.cpp  Richardson.h  Solver.cpp  Solver.h  SolverFactory.cpp  SolverFactory.h
Types/: CMakeLists.txt  Matrix.cpp  Matrix.h  Vector.cpp  Vector.h
html/: _cholesky_8cpp_source.html  _cholesky_8h_source.html  _conjugate_gradient_descent_8cpp_source.html  _conjugate_gradient_descent_8h_source.html  _exceptions_8cpp_source.html  _exceptions_8h_source.html  _gauss_seidel_8cpp_source.html  _gauss_seidel_8h_source.html  _iterative_solvers_8cpp_source.html  _iterative_solvers_8h_source.html  _jacobi_8cpp_source.html  _jacobi_8h_source.html  _l_u_8cpp_source.html  _l_u_8h_source.html  _main_8cpp_source.html  _matrix_8cpp_source.html  _matrix_8h_source.html  _p_c_conjugate_gradient_descent_8cpp_source.html  _p_c_conjugate_gradient_descent_8h_source.html  _preconditioners_8cpp_source.html  _preconditioners_8h_source.html  _r_e_a_d_m_e_8md_source.html  annotated.html  (+143 more)
(+45 files in other folders)
